--- a/app/ResourcesLibrary/ResourcesLibrary.csproj
+++ b/app/ResourcesLibrary/ResourcesLibrary.csproj
@@ -40,11 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Beer.cs" />
+    <Compile Include="Models\Event.cs" />
+    <Compile Include="Models\Food.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\BeerService.cs" />
+    <Compile Include="Services\EventsService.cs" />
+    <Compile Include="Services\FoodService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
