--- a/app/brewery/brewery.csproj
+++ b/app/brewery/brewery.csproj
@@ -200,6 +200,7 @@
     <Content Include="Views\Events\Index.cshtml" />
     <Content Include="Views\Food\Index.cshtml" />
     <Content Include="Views\Gallery\Index.cshtml" />
+    <Content Include="Views\Beer\GetItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
